--- a/.sencha/app/sencha.cfg
+++ b/.sencha/app/sencha.cfg
@@ -1,10 +1,11 @@
 # this property specifies a comma separated list of paths containing
 # resources to copy to the build directory
-app.resource.paths=${app.dir}/resources
+app.resource.paths=
 
 #==============================================================================
 # Custom Properties - Place customizations below this line to avoid merge
 # conflicts with newer versions
 
 app.framework.version=6.0.0.415
-app.cmd.version=6.0.0.154
+
+app.cmd.version=6.2.2.36
