--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
      * The application's namespace.
      */
     "name": "NShape",
-    
+
     /**
      * The version of the application.
      */
@@ -41,10 +41,10 @@
      * The Sencha Framework for this application: "ext" or "touch".
      */
     "framework": "ext",
-    
-    
-    
-    
+
+
+
+
     /**
      * The list of required packages (with optional versions; default is "latest").
      *
@@ -91,14 +91,14 @@
          *         // The file used to save sass variables edited via Sencha Inspector and Sencha Themer.
          *         // This file will automatically be applied to the end of the scss build.
          *         "var": "sass/save.scss",
-         *      
+         *
          *         // The directory used to save generated sass sources.
          *         // This directory will automatically be applied to the end of the scss build.
          *         "src": "sass/save"
          *      }
          *
          */
-         
+
 
         /**
          * Comma-separated list of files or folders containing extra Sass. These
@@ -220,7 +220,7 @@
         }
     ],
 
-    
+
     /**
      * Settings specific to classic toolkit builds.
      */
@@ -322,13 +322,13 @@
             "type": "yui"
         }
     },
-    
+
     /**
      * Settings specific to testing builds.
      */
     "testing": {
     },
-    
+
     /**
      * Settings specific to development builds.
      */
@@ -367,9 +367,9 @@
      */
     "bootstrap": {
         "base": "${app.dir}",
-        
+
         "manifest": "${build.id}.json",
-        
+
         "microloader": "bootstrap.js",
         "css": "bootstrap.css"
     },
@@ -414,7 +414,7 @@
      *      }
      *
      */
-    
+
     "output": {
         "base": "${workspace.build.dir}/${build.environment}/${app.name}",
         "page": "index.html",
@@ -428,8 +428,8 @@
             "shared": "resources"
         }
     },
-    
-    
+
+
     /**
     * Controls for localStorage caching
     *   "cache": {
@@ -445,12 +445,12 @@
     *       "deltas": "deltas"
     *   }
     */
-    
+
     "cache": {
         "enable": false,
         "deltas": "${build.id}/deltas"
     },
-    
+
 
     /**
      * Used to automatically generate cache.manifest (HTML 5 application cache manifest)
@@ -497,9 +497,9 @@
      * generated inside this directory must be kept intact for proper generation of
      * deltas between updates.
      */
-    
+
     "archivePath": "archive/${build.id}",
-    
+
 
 
 
@@ -523,36 +523,36 @@
      *     }
      *
      */
-    
+
     "builds": {
         "classic": {
             "toolkit": "classic",
-            
+
             "theme": "theme-triton",
-            
+
             "sass": {
                 "generated": {
                     "var": "classic/sass/save.scss",
                     "src": "classic/sass/save"
                 }
             }
-        },
+        //},
 
-        "modern": {
-            "toolkit": "modern",
-            
-            "theme": "theme-triton",
-            
-            "sass": {
-                "generated": {
-                    "var": "modern/sass/save.scss",
-                    "src": "modern/sass/save"
-                }
-            }
+        //"modern": {
+        //    "toolkit": "modern",
+        //
+        //    "theme": "theme-triton",
+        //
+        //    "sass": {
+        //        "generated": {
+        //            "var": "modern/sass/save.scss",
+        //            "src": "modern/sass/save"
+        //        }
+        //    }
         }
     },
-    
-    
+
+
     /**
      * File / directory name patttern to ignore when copying to the builds. Must be a
      * valid regular expression.
