--- a/.air.toml
+++ b/.air.toml
@@ -6,24 +6,24 @@ tmp_dir = "tmp"
   args_bin = []
   bin = "./dist/network-shaper"
   cmd = "go build -o ./dist/network-shaper ./cmd/network-shaper"
-  delay = 1000
+  delay = 500
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
-  exclude_regex = ["_test.go"]
+  exclude_regex = ["_test.go", "_templ.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html", "django", "css"]
+  include_ext = ["go", "tpl", "templ", "html", "css"]
   include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
   poll = false
   poll_interval = 0
   post_cmd = []
-  pre_cmd = ["make css"]
+  pre_cmd = ["make templ", "make css"]
   rerun = false
-  rerun_delay = 500
+  rerun_delay = 250
   send_interrupt = false
   stop_on_error = false
 
