--- a/.air.toml
+++ b/.air.toml
@@ -9,7 +9,7 @@ tmp_dir = "tmp"
   delay = 500
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "codegen"]
   exclude_file = []
-  exclude_regex = ["_test.go", "_templ.go"]
+  exclude_regex = ["_test.go", "_templ.go", "_tcogen.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
@@ -21,7 +21,7 @@ tmp_dir = "tmp"
   poll = false
   poll_interval = 0
   post_cmd = []
-  pre_cmd = ["make templ", "make css"]
+  pre_cmd = ["go generate"]
   rerun = false
   rerun_delay = 250
   send_interrupt = false
